--- a/index/index.html
+++ b/index/index.html
@@ -11,6 +11,8 @@
 		<!-- background-color: lightseagreen; -->
 		margin: 20px;
 		<!-- background-image: url('smiley.png'); -->
+
+		
 	}
 	body, h1, h2, h3, h4, h5, h6  {
 		font-family: "Trebuchet MS", Tahoma, sans-serif;
@@ -80,7 +82,6 @@
 		border-radius: 25px;
 		text-align: center;
 		width: 300px;
-		
 	}
 	</style>
   <meta charset="utf-8">
@@ -125,10 +126,10 @@
 	
 		<button id="inputbut" type="button" onclick="input()">CALCULATE SLA</button>
 	</div>	
+	<br><br><br><br><br><br><br>
 	<div class="output">
 	<a href="https://www.iww.org" target="_blank" style="text-decoration:none;color:black;"<p> </p></a>
-	<h3>OUTPUT</h3>
-	<br>
+	<!-- <h3>OUTPUT</h3> -->
 	<p id="demo" style="color:white;"></p>
 	</div>
 
