--- a/index/bc.html
+++ b/index/bc.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round">
+		<style>
+			body{
+				zoom: 200%
+				background-color: seabluegreen;
+				background-image: url('background.png');
+				background-size: cover;
+				background-repeat: no-repeat;
+			}
+			textarea{
+				font-size: 15px;
+				border-radius: 15px;
+				font-family: "Varela Round", "Trebuchet MS", sans-serif;
+				background-color: lightgreen;
+			}
+			h2{
+				font-family: "Varela Round", "Trebuchet MS", sans-serif;
+				
+			}
+		</style>
+		<meta charset="utf-8">
+  
+		<title>Barrier Codes</title>
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+
 	</head>
+	
 	<body>
+		<h2>Barrier Code Timestamps</h2>
+		<textarea id="bc" rows="10" cols="40"></textarea>
 		
 	</body>
 </html>
