--- a/bc.html
+++ b/bc.html
@@ -8,7 +8,7 @@
 				background-image: url('background.png');
 				background-size: cover;
 				background-repeat: no-repeat;
-				zoom: 200%;
+				zoom: 275%;
 			}
 			textarea{
 				font-size: 15px;
@@ -38,6 +38,8 @@
 				display: flex; 
 				justify-content: center; 
 				align-items: center;
+				border: 2px solid black;
+				box-shadow: 5px 5px 5px darkslategray;	
 			}
 		</style>
 		<meta charset="utf-8">
